--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfólio | Lívio Costa</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body class="gradient-bg min-h-screen text-gray-100 font-sans">
     <!-- Header/Navigation -->
@@ -23,7 +23,7 @@
               <a href="#about" class="nav-item">Sobre</a>
               <a href="#skills" class="nav-item">Habilidades</a>
               <a href="#projects" class="nav-item">Projetos</a>
-              <a href="./Curriculo_Livio.pdf" class="nav-item font-semibold border border-blue-500 px-3 py-1 rounded-md hover:bg-blue-500 hover:text-white transition">
+              <a href="public/Curriculo_Livio.pdf" class="nav-item font-semibold border border-blue-500 px-3 py-1 rounded-md hover:bg-blue-500 hover:text-white transition">
                 Baixar CV
               </a>
             </div>
@@ -56,7 +56,7 @@
         </div>
         <div class="md:w-1/2 flex justify-center">
             <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-blue-400">
-                <img src="./img/profile.png" 
+                <img src="public/img/profile.png" 
                      alt="Foto do Lívio Costa" 
                      class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-blue-400 opacity-10"></div>
@@ -201,7 +201,7 @@
                 <!-- Project 1 -->
                 <div class="bg-gray-800 rounded-lg overflow-hidden card-hover">
                     <div class="h-48 overflow-hidden">
-                        <img src="./img/projeto3.png" 
+                        <img src="public/img/projeto3.png" 
                              alt="PokeAPI Pokedex" 
                              class="w-full h-full object-cover">
                     </div>
@@ -231,7 +231,7 @@
                 <!-- Project 2 -->
                 <div class="bg-gray-800 rounded-lg overflow-hidden card-hover">
                     <div class="h-48 overflow-hidden">
-                        <img src="./img/projeto1.png" 
+                        <img src="/public/img/projeto1.png" 
                              alt="itau Banco" 
                              class="w-full h-full object-cover">
                     </div>
@@ -257,7 +257,7 @@
                 <!-- Project 3 -->
                 <div class="bg-gray-800 rounded-lg overflow-hidden card-hover">
                     <div class="h-48 overflow-hidden">
-                        <img src="./img/pojeto2.png" 
+                        <img src="/public/img/projeto3.png" 
                              alt="Snake Game Java" 
                              class="w-full h-full object-cover">
                     </div>
@@ -416,7 +416,7 @@
         </div>
     </footer>
 
-    <script src="JS/script.js"></script>
+    <script src="public/JS/script.js"></script>
 
     
 </body>
