--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio | Lívio Costa</title>
+    <title>Lívio Costa | Dev</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="icon" type="image/png" href="./img/koala-icon.png">
+
+
 </head>
 <body class="gradient-bg min-h-screen text-gray-100 font-sans">
     <!-- Header/Navigation -->
