--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="public/css/style.css">
-    <link rel="icon" type="image/png" href="./img/koala-icon.png">
+    <link rel="icon" type="image/png" href="public/img/koala-icon.png">
 
 
 </head>
