--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                             </div>
                             <div>
                                 <h4 class="font-medium">Email</h4>
-                                <a href="mailto:liviocosta229@gmail.com" class="text-blue-400 hover:text-blue-300 transition">liviocosta229@gmail.com</a>
+                                <a href="mailto:liviocosta229@gmail.com" class="text-blue-400 hover:text-blue-300 transition">devliviocosta@gmail.com</a>
                             </div>
                         </div>
                         
