--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 </head>
 <body class="gradient-bg min-h-screen text-gray-100 font-sans">
+
+    <div class="aviso">⚠️ Aviso: A funcionalidade do formulario para está temporariamente fora do ar.</div>
+
     <!-- Header/Navigation -->
     <header class="container mx-auto px-6 py-6">
         <nav class="flex justify-between items-center">
@@ -50,7 +53,7 @@
                 Desenvolvedor Backend
             </div>
             <p class="text-lg mb-8 text-gray-300">
-                Especializado em construir APIs robustas e sistemas escaláveis com Node.js, Python e Java.
+                Especializado em Node.js, Python e Java.
             </p>
             <div class="flex space-x-4">
                 <a href="#contact" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-medium transition">
