--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="gradient-bg min-h-screen text-gray-100 font-sans">
 
-    <div class="aviso">⚠️ Aviso: A funcionalidade do formulario para está temporariamente fora do ar.</div>
+    <div class="aviso" id="aviso">⚠️ Aviso: A funcionalidade do formulario para está temporariamente fora do ar.</div>
 
     <!-- Header/Navigation -->
     <header class="container mx-auto px-6 py-6">
@@ -49,12 +49,10 @@
     <section id="home" class="container mx-auto px-6 py-20 flex flex-col md:flex-row items-center" data-aos="fade-up" data-aos-duration="1000">
         <div class="md:w-1/2 mb-10 md:mb-0">
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Olá, eu sou <span class="text-blue-400">Lívio Costa</span></h1>
-            <div class="typewriter text-2xl md:text-3xl mb-6">
+            <div class="typewriter text-2xl md:text-3xl ">
                 Desenvolvedor Backend
             </div>
-            <p class="text-lg mb-8 text-gray-300">
-                Especializado em Node.js, Python e Java.
-            </p>
+            <br>
             <div class="flex space-x-4">
                 <a href="#contact" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-medium transition">
                     Contate-me
@@ -342,7 +340,24 @@
                 </div>
                 
                 <div class="md:w-1/2 md:pl-12">
-                    <form class="bg-gray-800 rounded-lg p-8" method="post" id="contactForm">
+                    <form class="bg-gray-800 rounded-lg p-8" method="post" id="contactForm" style="opacity: 0.5; pointer-events: none; filter: grayscale(100%);">
+                         <!-- Overlay com a mensagem -->
+                        <div style="
+                          position: absolute;
+                          top: 0; left: 0;
+                          width: 100%; height: 100%;
+                          background: rgba(255, 255, 255, 0.349);
+                          display: flex;
+                          justify-content: center;
+                          font-weight: bold;
+                          color: #333;
+                          align-items: center;
+                          cursor: not-allowed;
+                          font-size: 20px;
+                          
+                         ">
+                         ⚠️ Temporariamente Inativo
+                        </div>
                         <div class="mb-6">
                             <label for="name" class="block text-gray-300 mb-2">Nome</label>
                             <input type="text" id="name" class="w-full bg-gray-700 border border-gray-600 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent" name="name" required>
