Alterando imagens do projeto e atualizando descriçao pessoal

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                          Apaixonado por arquitetura de software e soluções escaláveis. Minha jornada começou como um entusiasta de programação e evoluiu para um profissional focado em construir sistemas backend eficientes e seguros e atualmente em busca da minha primeira oportunidade na área.
                     </p>
                     <p class="text-gray-300 mb-6">
-                        Minha especialidade é desenvolver APIs RESTful, integrar sistemas complexos e otimizar o desempenho de aplicações. Acredito em código limpo, testes automatizados e documentação completa.
+                        Meu foco é desenvolver APIs RESTful, integrar sistemas e otimizar o desempenho de aplicações. Acredito em código limpo, testes automatizados e documentação completa.
                     </p>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="flex items-center">
@@ -191,22 +191,21 @@
                              class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">PokeAPI Pokedex</h3>
-                        <p class="text-gray-300 mb-4">Aplicação web que consome a PokeAPI para o preenchimento de informações em uma pokedex.</p>
+                        <h3 class="text-xl font-semibold mb-2">Encurtador de Url</h3>
+                        <p class="text-gray-300 mb-4">Projeto de encurtador de url feito com Springboot buildando um pequeno CRUD para um encurtador de link, desafio segue todos os padrões que foram propostos pelo Backend Brasil</p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">HTML</span>
-                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">CSS</span>
-                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">JavaScript</span>
-                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">API Fetch</span>
-                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">Node.JS</span>
+                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">Java 21</span>
+                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">PostgreSQL</span>
+                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">Spring Boot</span>
+                           
                             
 
                         </div>
                         <div class="flex justify-between">
-                            <a href="https://github.com/livio1212/projeto-pokemon" class="text-blue-400 hover:text-blue-300 transition">
+                            <a href="https://github.com/livio1212/EncurtadorUrl" class="text-blue-400 hover:text-blue-300 transition">
                                 <i class="fas fa-code mr-1"></i> Código
                             </a>
-                            <a href="https://github.com/livio1212/projeto-pokemon" class="text-blue-400 hover:text-blue-300 transition">
+                            <a href="https://github.com/livio1212/EncurtadorUrl" class="text-blue-400 hover:text-blue-300 transition">
                                 <i class="fas fa-external-link-alt mr-1"></i> Demo
                             </a>
                         </div>
@@ -225,7 +224,7 @@
                         <p class="text-gray-300 mb-4">API REST desenvolvida com base no desafio para desenvolvedor junior do ITAU</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">Node.js</span>
-                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">JSON</span>
+                            <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">Express</span>
                             <span class="bg-blue-900 text-blue-300 px-3 py-1 rounded-full text-sm">JavaScript</span>
                         </div>
                         <div class="flex justify-between">
